# cancer-goggles

./: README.md  environment.yml  pyproject.toml  setup.cfg
DNH/: README_TestReport&UserFeedback.md
DNH/HMDOpView/: LoadAnim.cpp
DNH/HMDOpView/CamVideo/: ManagedCam.cpp  ManagedCam.h
DNH/HMDOpView/States/: StateHMDOp.cpp
DNH/HMDOpView/Utils/: ProcessingType.cpp  ProcessingType.h  cvgCamFeedSource.cpp  cvgCamFeedSource.h
demos/: tk_testy.py
scripts/: build_opencv.sh
src/: __init__.py  meta_dialog.py  models.py  parameter_dialog.py  parameter_item.py  ui.py  utils.py  video_panel.py  video_player.py  views.py
src/algorithms/: threshold.py
src/ui/: __init__.py
