[build-system]
requires = [
  "setuptools>=40.9.0",
  "wheel",
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = "tests"
addopts = "--strict-markers"

[tool.black]
target-version = ['py38']

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]
skip = "setup.py"