[metadata]
name = cancer-goggles
version = 0.0.1.dev
description = Placeholder
long_description = file: README.md
long_description_content_type = text/markdown
author = Achilefu-Lab

[options]
packages = find:
install_requires =
    opencv-python-headless
    numpy
python_requires = >=3.8.0
include_package_data = True

[options.entry_points]
console_scripts =
    goggles = src:start_gui